# django-boilerplate

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.inngest.yaml  docker-compose.local.yaml  docker-compose.production.yaml  init.sql  pyproject.toml
clerk/: admin.py  apps.py  authentication.py  serializers.py  urls.py  utils.py  views.py  webhook.py
common/: __init__.py  mixin.py  models.py  pagination.py  response.py  upload_path.py  utils.py
config/: asgi.py  env.py  urls.py  wsgi.py
config/extensions/: celery.py
config/settings/: base.py  deploy.py  local.py
django_inngest/: __init__.py  client.py  functions.py  views.py
users/: admin.py  authentication.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/models/: __init__.py  user.py
users/templates/: base_email.html  otp_email.html
utils/: __init__.py  file.py
